--- a/CircularConvolution.html
+++ b/CircularConvolution.html
@@ -29,14 +29,19 @@
                 <img src="assets/circConvFormula-5.svg" alt="..." class="mx-auto d-block"><br>
                 <p>This function is <strong>N</strong>-periodic. It has at most <strong>N</strong> unique values. For the special case that the non-zero extent of both x and h are ≤ N, it is reducible to matrix multiplication where the kernel of the integral transform is a circulant matrix.</p><br><br>
                 <p>The step-by-step values for the provided input is shown below :</p>
+                <h4 class="plot-title" id="exp-part-1" style="color: black;">x(n) and h(n) :</h4>
                 <table id="exp">
                 </table><hr>
+                <h4 class="plot-title" id="exp-part-2" style="color: black;">Add the below sequences :</h4>
                 <table id="exp1">
                 </table><hr>
+                <h4 class="plot-title" id="exp-part-3" style="color: black;">Linear Convoluted output :</h4>
                 <table id="exp2">
                 </table><hr>
+                <h4 class="plot-title" id="exp-part-4" style="color: black;">Split and add the sequences as shown below :</h4>
                 <table id="exp3">
                 </table><hr>
+                <h4 class="plot-title" id="exp-part-5" style="color: black;">y<sub>c</sub>(n) :</h4>
                 <table id="exp4">
                 </table><hr><br><br>
             </div>
@@ -45,22 +50,25 @@
             <div class="container pt-2 input-block">
                 <br>
                 <h3>Enter the first sequence :</h3>
-                <input id="a" placeholder="1,2,3,4"/>
+                <input id="sequence1" placeholder="1,2,3,4..."/>
                 <br><br>
                 <h3>Enter the second sequence :</h3>
-                <input id="b" placeholder="1,2,3,4"/>
+                <input id="sequence2" placeholder="1,2,3,4..."/>
                 <br><br>
                 <button type="submit" class="btn btn-warning" onclick="circularConv()">Submit</button>
                 <br><br>
-                <h4 id="resp"></h4>
+                <h4 id="circularConvResponse"></h4>
                 <br><br>
-                <h4 class="plot-title" id="input-title">Input sequence :</h4><br>
+                <h4 class="plot-title" id="input-title">x(n) :</h4><br>
+                <!-- Input sequence plot is displayed -->
                 <canvas class="outputSequence" id="inputResp"></canvas>
                 <br><br>
-                <h4 class="plot-title" id="impulse-title">Impulse sequence :</h4><br>
+                <h4 class="plot-title" id="impulse-title">h(n) :</h4><br>
+                <!-- Impulse sequence plot is displayed -->
                 <canvas class="outputSequence" id="impulseResp"></canvas>
                 <br><br>
-                <h4 class="plot-title" id="output-title">Ouput sequence :</h4><br>
+                <h4 class="plot-title" id="output-title">Circular Convolution Ouput y(n) :</h4><br>
+                <!-- Output sequence plot is displayed -->
                 <canvas class="outputSequence" id="outputResp"></canvas><br><br>
             </div>
         </div>
@@ -69,21 +77,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script type="text/javascript">
         function circularConv() {
+            // The explanatory tables are initiated with null
             document.getElementById("exp").innerHTML="";
             document.getElementById("exp1").innerHTML="";
             document.getElementById("exp2").innerHTML="";
             document.getElementById("exp3").innerHTML="";
             document.getElementById("exp4").innerHTML="";
-            const x = document.getElementById("a").value.split(",");
-            const y = document.getElementById("b").value.split(",");
+            // Input sequences are taken
+            const x = document.getElementById("sequence1").value.split(",");
+            const h = document.getElementById("sequence2").value.split(",");
             const m = x.length;
-            const n = y.length;
+            const n = h.length;
+            // N is the length to which convolution is performed
             const N = Math.max(m,n);
             const N1 = m+n-1;
+            // Values are iterated and converted to float
             const xt = x.map((val) => parseFloat(val));
-            const yt = y.map((val) => parseFloat(val));
+            const ht = h.map((val) => parseFloat(val));
 
-
+            // Input sequences are displayed for dynamic part
             if(m<n) {
                 var tr = document.createElement('tr');
                 var str ='';
@@ -99,7 +111,7 @@
                 var tr = document.createElement('tr');
                 var str ='';
                 for(let i=0;i<n;i++) {
-                    str+=`<td> ${yt[i]}</td>`;
+                    str+=`<td> ${ht[i]}</td>`;
                     tr.innerHTML=str;
                 }
                 document.getElementById("exp").appendChild(tr);
@@ -118,7 +130,7 @@
                     tr.innerHTML=str;
                 }
                 for(let i=0;i<n;i++) {
-                    str+=`<td> ${yt[i]}</td>`;
+                    str+=`<td> ${ht[i]}</td>`;
                     tr.innerHTML=str;
                 }
                 document.getElementById("exp").appendChild(tr);
@@ -133,12 +145,13 @@
                 var tr = document.createElement('tr');
                 var str ='';
                 for(let i=0;i<n;i++) {
-                    str+=`<td> ${yt[i]}</td>`;
+                    str+=`<td> ${ht[i]}</td>`;
                     tr.innerHTML=str;
                 }
                 document.getElementById("exp").appendChild(tr);
             }
             
+            // step-by-step of convolution is displayed
             for(let i=0;i<n;i++) {
                 var tr = document.createElement('tr');
                 var str ='';
@@ -147,7 +160,7 @@
                     tr.innerHTML=str;
                 }
                 for(let j=0;j<m;j++){
-                    str+=`<td> ${yt[i]*xt[j]}</td>`;
+                    str+=`<td> ${ht[i]*xt[j]}</td>`;
                     tr.innerHTML=str;
                 }
                 document.getElementById("exp1").appendChild(tr);
@@ -158,64 +171,66 @@
                 xt.push(0);
             }
             for(let b=0; b<N1-n; b++) {
-                yt.push(0);
+                ht.push(0);
             }
-            const z = [];
+            const yt = [];
             for(let i=0; i<N1; i++){
                 sum = 0;
                 for(let j=0; j<N1; j++){
                     if(j <=i) {
-                        sum += xt[j]*yt[i-j];
+                        sum += xt[j]*ht[i-j];
                     } else {
-                        sum += xt[j]*yt[N1+i-j];
+                        sum += xt[j]*ht[N1+i-j];
                     }
                 }
-                z.push(sum);
+                yt.push(sum);
             }
 
 
             var tr = document.createElement('tr');
             var str ='';
-            for(let i=0;i<z.length;i++) {
-                str+=`<th> ${z[i]}</th>`;
+            for(let i=0;i<yt.length;i++) {
+                str+=`<th> ${yt[i]}</th>`;
                 tr.innerHTML=str;
             }
             document.getElementById("exp2").appendChild(tr);
 
 
-            const z1 = z.slice(N);
+            const z = yt.slice(N);
 
             var tr = document.createElement('tr');
             var str ='<td></td>';
             for(let i=0;i<N;i++) {
-                str+=`<td> ${z[i]}</td>`;
+                str+=`<td> ${yt[i]}</td>`;
                 tr.innerHTML=str;
             }
             document.getElementById("exp3").appendChild(tr);
 
             var tr = document.createElement('tr');
             var str ='<td>+</td>';
-            for(let i=N;i<z.length;i++) {
-                str+=`<td> ${z[i]}</td>`;
+            for(let i=N;i<yt.length;i++) {
+                str+=`<td> ${yt[i]}</td>`;
                 tr.innerHTML=str;
             }
             document.getElementById("exp3").appendChild(tr);
 
 
-            for(let c=0; c<z1.length; c++) {
-                z[c] += z1[c];
+            for(let c=0; c<z.length; c++) {
+                yt[c] += z[c];
             }
-            const z2 = z.slice(0,N);
-            document.getElementById("resp").innerText = "The Circular Convolution output is: " + z2;
+            const yc = yt.slice(0,N);
+            // output response is displayed
+            document.getElementById("circularConvResponse").innerText = "The Circular Convolution output is: \n" + yc;
 
             var tr = document.createElement('tr');
             var str ='';
-            for(let i=0;i<z2.length;i++) {
-                str+=`<th> ${z2[i]}</th>`;
+            for(let i=0;i<yc.length;i++) {
+                str+=`<th> ${yc[i]}</th>`;
                 tr.innerHTML=str;
             }
             document.getElementById("exp4").appendChild(tr);
 
+            // input sequence will be plotted
             const xyInputValues = [];
             for(let j=0; j<m; j++) {
                 xyInputValues.push({x:j,y:xt[j]});
@@ -234,9 +249,10 @@
                 }
             });
 
+            // impulse sequence will be plotted
             const xyImpulseValues = [];
             for(let j=0; j<n; j++) {
-                xyImpulseValues.push({x:j,y:yt[j]});
+                xyImpulseValues.push({x:j,y:ht[j]});
             }
             new Chart("impulseResp", {
                 type: "scatter",
@@ -252,9 +268,10 @@
                 }
             });
 
+            // output sequence will be plotted
             const xyOutputValues = [];
             for(let j=0; j<N; j++) {
-                xyOutputValues.push({x:j,y:z2[j]});
+                xyOutputValues.push({x:j,y:yc[j]});
             }
             new Chart("outputResp", {
                 type: "scatter",
@@ -270,12 +287,18 @@
                 }
             });
 
+            // specific texts are displayed
             document.getElementById("inputResp").style.display ="block";
             document.getElementById("input-title").style.display ="block";
             document.getElementById("impulseResp").style.display ="block";
             document.getElementById("impulse-title").style.display ="block";
             document.getElementById("outputResp").style.display ="block";
             document.getElementById("output-title").style.display ="block";
+            document.getElementById("exp-part-1").style.display ="block";
+            document.getElementById("exp-part-2").style.display ="block";
+            document.getElementById("exp-part-3").style.display ="block";
+            document.getElementById("exp-part-4").style.display ="block";
+            document.getElementById("exp-part-5").style.display ="block";
 
         }
     </script>
